--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -3,16 +3,21 @@
   "version": "1.0.0",
   "description": "Shared types, utilities, and constants for Planning Poker application",
   "type": "module",
-  "main": "dist/index.js",
+  "main": "dist/cjs/index.cjs",
+  "module": "dist/index.js", 
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
+      "require": "./dist/cjs/index.cjs",
       "import": "./dist/index.js",
       "types": "./dist/index.d.ts"
     }
   },
   "scripts": {
-    "build": "tsc",
+    "build": "npm run build:esm && npm run build:cjs && npm run rename:cjs",
+    "build:esm": "tsc",
+    "build:cjs": "tsc -p tsconfig.cjs.json",
+    "rename:cjs": "node rename-cjs.cjs",
     "dev": "tsc --watch",
     "clean": "rm -rf dist",
     "lint": "eslint src --ext .ts",
