--- a/packages/server/.env.example
+++ b/packages/server/.env.example
@@ -3,11 +3,15 @@ NODE_ENV=development
 PORT=5000
 CLIENT_URL=http://localhost:3000
 
-# MongoDB connection (when using database)
-# MONGODB_URI=mongodb://localhost:27017/planning-poker
+# MongoDB connection
+MONGODB_URI=mongodb://localhost:27017/planning-poker
 
 # JWT Secret (for authentication)
-# JWT_SECRET=your-super-secret-jwt-key
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 
 # CORS settings
 CORS_ORIGIN=http://localhost:3000
+
+# Rate limiting
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100
