--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -24,7 +24,11 @@
     "express-rate-limit": "^6.8.1",
     "joi": "^17.9.2",
     "uuid": "^9.0.0",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "mongoose": "^8.0.0",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "express-validator": "^7.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
@@ -33,6 +37,8 @@
     "@types/uuid": "^9.0.2",
     "@types/node": "^20.4.5",
     "@types/jest": "^29.5.3",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^9.0.3",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "jest": "^29.6.1",
