--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "description": "React frontend for Planning Poker application",
   "dependencies": {
+    "@auth0/auth0-react": "^2.8.0",
     "@planning-poker/shared": "^1.0.0",
     "axios": "^1.4.0",
     "lucide-react": "^0.292.0",
