feat: Add GitHub Actions workflow for deploying client to GitHub Pages

--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -5,11 +5,13 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "react-jsx",
     "strict": true,
+    "allowSyntheticDefaultImports": true,
+    "noImplicitAny": false,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
@@ -23,5 +25,8 @@
     "emitDeclarationOnly": true
   },
   "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "references": [
+    { "path": "../shared/tsconfig.json" },
+    { "path": "./tsconfig.node.json" }
+  ]
 }
