--- a/packages/client/.env.example
+++ b/packages/client/.env.example
@@ -1,2 +1,4 @@
 # Vite environment variables
 VITE_API_URL=http://localhost:5000
+VITE_AUTH0_DOMAIN=YOUR_AUTH0_DOMAIN
+VITE_AUTH0_CLIENT_ID=YOUR_AUTH0_CLIENT_ID
