--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,6 +4,7 @@
   "description": "Express.js backend server for Planning Poker application",
   "main": "dist/index.js",
   "scripts": {
+    "prebuild": "npm run build --workspace=../shared",
     "dev": "nodemon --exec ts-node src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
