fix: update exports structure in package.json for better module resolution

--- a/packages/shared/tsconfig.cjs.json
+++ b/packages/shared/tsconfig.cjs.json
@@ -3,6 +3,8 @@
   "compilerOptions": {
     "module": "CommonJS",
     "outDir": "./dist/cjs",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "declaration": false,
+    "composite": false
   }
 }
