--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -8,13 +8,18 @@
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
-      "require": "./dist/cjs/index.cjs",
-      "import": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "require": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/cjs/index.cjs"
+      },
+      "import": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.js"
+      }
     }
   },
   "scripts": {
-    "build": "npm run build:esm && npm run build:cjs && npm run rename:cjs",
+    "build": "npm run clean && npm run build:esm && npm run build:cjs && npm run rename:cjs",
     "build:esm": "tsc",
     "build:cjs": "tsc -p tsconfig.cjs.json",
     "rename:cjs": "node rename-cjs.cjs",
