--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,8 +3,16 @@ name: Deploy Client to GitHub Pages
 on:
   push:
     branches: [ main ]
+    paths:
+      - 'packages/client/**'
+      - 'packages/shared/**'
+      - '.github/workflows/deploy.yml'
   pull_request:
     branches: [ main ]
+    paths:
+      - 'packages/client/**'
+      - 'packages/shared/**'
+      - '.github/workflows/deploy.yml'
 
 jobs:
   build-and-deploy:
