--- a/packages/shared/tsconfig.esm.json
+++ b/packages/shared/tsconfig.esm.json
@@ -1,10 +1,9 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "module": "CommonJS",
-    "outDir": "./dist/cjs",
+    "module": "ESNext",
+    "outDir": "./dist",
     "moduleResolution": "node",
-    "declaration": true,
     "composite": false
   }
 }
