--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -14,7 +14,11 @@
     "sourceMap": true,
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
-    "composite": true
+    "composite": true,
+    "baseUrl": ".",
+    "paths": {
+      "@planning-poker/shared": ["../shared/dist/cjs/index.d.ts"]
+    }
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.spec.ts"],
